Should fix race condition where resource images are sometimes briefly visible onscreen.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 .large-viewport{ width:800px; height:800px; }
 .level{ position:absolute; left:0; top:0; z-index:10; visibility: hidden}
 .current-level{ z-index:20; visibility: visible }
-.resources {visibility: hidden}
 
 #map-1{ position:absolute; left:0; top:0; }
 img{ border:0; }
